syntax = "proto3";

package tensorflow;

option go_package = "github.com/google/tsl/tsl/go/protobuf/for_core_protos_go_proto";

// If included as a payload, this message contains associated source location
// for the error Status.
message StackTracePayload {
  message StackFrame {
    string file_name = 1;
    int32 line_number = 2;
    string function_name = 3;
  }

  repeated StackFrame stack_frames = 1;
}
